--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "5.11.3",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "antd": "^5.11.3",
+    "babel-plugin-import": "^1.13.8",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
