--- a/03_状态管理/05_反向数据流/vite-project/package.json
+++ b/03_状态管理/05_反向数据流/vite-project/package.json
@@ -10,17 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.23.3",
-    "antd": "^5.11.3",
-    "babel-plugin-import": "^1.13.8",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.3",
-    "ol": "^8.2.0",
+    "@ant-design/icons": "^5.2.6",
+    "antd": "5.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0",
-    "rect": "^1.2.1"
+    "use-between": "^1.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
