--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -15,6 +15,8 @@
     "babel-plugin-import": "^1.13.8",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "ol": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +25,8 @@
     "rect": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.23.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
