--- a/project/后台管理系统/vite-project/package.json
+++ b/project/后台管理系统/vite-project/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ol": "^8.2.0",
+    "antd": "^5.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
