--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@galacean/effects": "^1.0.1",
     "antd": "^5.11.3",
+    "axios": "^1.6.2",
     "babel-plugin-import": "^1.13.8",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
