--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.3",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@galacean/effects": "^1.0.1",
     "antd": "^5.11.3",
