--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
     "@ant-design/plots": "^2.1.3",
@@ -46,14 +50,20 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.23.5",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-react-svg": "^0.2.0"
