--- a/05_antd/02_布局/vite-project/package.json
+++ b/05_antd/02_布局/vite-project/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "type-check": "tsc",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "jest": {
     "preset": "ts-jest",
@@ -36,6 +36,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
+    "marked": "^11.1.1",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "ol": "^8.2.0",
